# chivebox

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  README.md  build.rs
chiveroot/: Cargo.toml  build.rs
chiveroot/src/: embedded.rs  main.rs
src/: applets.rs  blkid.rs  free.rs  init.rs  ip.rs  main.rs  mount.rs  ping.rs  umount.rs  which.rs
src/ip/: addr.rs  link.rs  neigh.rs  netlink.rs  route.rs  rule.rs
src/sh/: mod.rs  rush.rs
src/sh/rush/: completion.rs  input.rs  mod.rs  shell.rs  tests.rs
src/volume_id/: mod.rs
