[package]
name = "chivebox"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
uucore = { version = "0.2", features = ["libc", "utmpx", "process", "entries", "signals", "parser"] }
uu_arch = "0.7"
uu_b2sum = "0.7"
uu_base32 = "0.7"
uu_base64 = "0.7"
uu_basename = "0.7"
uu_basenc = "0.7"
uu_cat = "0.7"
uu_chgrp = "0.7"
uu_chmod = "0.7"
uu_chown = "0.7"
uu_chroot = "0.7"
uu_cksum = "0.7"
uu_comm = "0.7"
uu_cp = "0.7"
uu_csplit = "0.7"
uu_cut = "0.7"
uu_date = "0.7"
uu_dd = "0.7"
uu_df = "0.7"
uu_dir = "0.7"
uu_dircolors = "0.7"
uu_dirname = "0.7"
uu_dmesg = { git = "https://github.com/uutils/util-linux", branch = "main" }
uu_du = "0.7"
uu_echo = "0.7"
uu_env = "0.7"
uu_expand = "0.7"
uu_expr = "0.7"
uu_factor = "0.7"
uu_false = "0.7"
uu_fmt = "0.7"
uu_fold = "0.7"
uu_groups = "0.7"
uu_head = "0.7"
uu_hexdump = { git = "https://github.com/uutils/util-linux", branch = "main" }
uu_hostid = "0.7"
uu_hostname = "0.7"
uu_id = "0.7"
uu_install = "0.7"
uu_join = "0.7"
uu_kill = "0.7"
uu_link = "0.7"
uu_ln = "0.7"
uu_logname = "0.7"
uu_ls = "0.7"
uu_lscpu = { git = "https://github.com/uutils/util-linux", branch = "main" }
uu_md5sum = "0.7"
uu_mkdir = "0.7"
uu_mkfifo = "0.7"
uu_mknod = "0.7"
uu_mktemp = "0.7"
uu_more = "0.7"
uu_mv = "0.7"
uu_nice = "0.7"
uu_nl = "0.7"
uu_nohup = "0.7"
uu_nproc = "0.7"
uu_numfmt = "0.7"
uu_od = "0.7"
uu_paste = "0.7"
uu_pathchk = "0.7"
uu_pinky = "0.7"
uu_pr = "0.7"
uu_printenv = "0.7"
uu_printf = "0.7"
uu_ptx = "0.7"
uu_pwd = "0.7"
uu_readlink = "0.7"
uu_realpath = "0.7"
uu_rm = "0.7"
uu_rmdir = "0.7"
uu_seq = "0.7"
uu_sha1sum = "0.7"
uu_sha224sum = "0.7"
uu_sha256sum = "0.7"
uu_sha384sum = "0.7"
uu_sha512sum = "0.7"
uu_shred = "0.7"
uu_shuf = "0.7"
uu_sleep = "0.7"
uu_sort = "0.7"
uu_split = "0.7"
uu_stat = "0.7"
uu_stty = "0.7"
uu_sum = "0.7"
uu_sync = "0.7"
uu_tac = "0.7"
uu_tail = "0.7"
uu_tee = "0.7"
uu_test = "0.7"
uu_timeout = "0.7"
uu_touch = "0.7"
uu_tr = "0.7"
uu_true = "0.7"
uu_truncate = "0.7"
uu_tsort = "0.7"
uu_tty = "0.7"
uu_uname = "0.7"
uu_unexpand = "0.7"
uu_uniq = "0.7"
uu_unlink = "0.7"
uu_uptime = "0.7"
uu_users = "0.7"
uu_vdir = "0.7"
uu_wc = "0.7"
uu_who = "0.7"
uu_whoami = "0.7"
uu_yes = "0.7"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
strip = true
